--- a/photos.html
+++ b/photos.html
@@ -37,14 +37,14 @@
     <img src="Gallery/DSC_7002.jpeg" width="5568" height="3712" alt=""/>
 	<img src="Gallery/DSC_3835.jpeg" alt=""/>
 	 <img src="Gallery/DSC_5321.jpeg" alt=""/>
-	 <img src="Gallery/DSC_5688.JPeG" alt=""/>
+	 <img src="Gallery/DSC_5688.jpeg" alt=""/>
 	 <img src="Gallery/DSC_5905.jpeg" alt=""/>
 	 <img src="Gallery/DSC_6111.jpeg" alt=""/>
-	 <img src="Gallery/DSC_6215.JPeG" alt=""/> 
+	 <img src="Gallery/DSC_6215.jpeg" alt=""/> 
 	 <img src="Gallery/DSC_6523.jpeg" alt=""/>
 	 <img src="train.jpeg" alt=""/>
 	 <img src="Gallery/DSC_6061.jpeg" alt=""/>
-	 <img src="Gallery/DSC_3566.JPeG" alt=""/>
+	 <img src="Gallery/DSC_3566.jpeg" alt=""/>
 	 <img src="Gallery/DSC_5572.jpeg" alt=""/>
   </table>
 </center>
